      for collection membership.

    - Improved weakref identity map memory management to no longer 
      require mutexing, resurrects garbage collected instance
      on a lazy basis for an InstanceState with pending changes.

    - relation() won't hide unrelated ForeignKey errors inside of
      the "please specify primaryjoin" message when determining
      join condition.

- sql
    - Further simplified SELECT compilation and its relationship
      to result row processing.

    - Direct execution of a union() construct will properly set up
      result-row processing. [ticket:1194]

    - The internal notion of an "OID" or "ROWID" column has been
      removed.  It's basically not used by any dialect, and the
      possibility of its usage with psycopg2's cursor.lastrowid
      is basically gone now that INSERT..RETURNING is available.
  
    - Removed "default_order_by()" method on all FromClause
      objects.

    - Slightly changed behavior of IN operator for comparing to
      empty collections. Now results in inequality comparison
      against self. More portable, but breaks with stored
      procedures that aren't pure functions.

0.5.0rc2
========
- orm
    - Fixed bug involving read/write relation()s that contain
      literal or other non-column expressions within their
      primaryjoin condition equated to a foreign key column.

    - "non-batch" mode in mapper(), a feature which allows mapper
      extension methods to be called as each instance is
      updated/inserted, now honors the insert order of the objects
      given.

    - Fixed RLock-related bug in mapper which could deadlock upon
      reentrant mapper compile() calls, something that occurs when
      using declarative constructs inside of ForeignKey objects.

    - ScopedSession.query_property now accepts a query_cls factory,
      overriding the session's configured query_cls.

    - Fixed shared state bug interfering with ScopedSession.mapper's